# quaks

./: .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GEMINI.md  Makefile  README.md  codex-skill  compose.yml  config-dev.yml  config-docker.yml  config-test.yml  pyproject.toml  requirements.txt  sonar-project.properties
.claude/: CLAUDE.md  mcp.json
.claude-plugin/: marketplace.json
.codex/: AGENTS.md  README.md  config.toml  source-map.json
.codex/agents/: README.md  quaks-generator.toml  quant.toml  seo.toml  software-engineering.toml
.codex/scripts/: sync_claude_compat.py
.codex/skills/: README.md
.gemini/scripts/: sync_claude_compat.py
.github/workflows/: build.yml  docker-image-dags.yml  docker-image-dr-tools.yml  docker-image-keycloak.yml  docker-image.yml  release.yml
app/: main.py
app/core/: container.py
app/services/: agent_settings.py  agents.py  attachments.py  auth.py  markets_insights.py  markets_news.py  markets_stats.py  published_content.py  waitlist.py
app/utils/: backtesting_utils.py  data_ingestion_utils.py
dags/: quaks_insights_news.py  quaks_markets_news.py  quaks_published_content.py  quaks_stocks_eod.py  quaks_stocks_estimated_earnings.py  quaks_stocks_fundamentals.py  quaks_stocks_insider_trades.py  quaks_stocks_metadata.py  quaks_waiting_list.py  quant_agents_markets_news.py  quant_agents_stocks_eod.py
doc/: ACKNOWLEDGEMENT.md  CLAUDE_PLUGIN.md  MCP.md  REFERENCE.md  SEO_AUDIT.md
docker/app/: Dockerfile
docker/dags/: Dockerfile
docker/dr-tools/: Dockerfile
docker/keycloak/: Dockerfile
frontend/: angular.json  jest.config.ts  links.txt  package-lock.json  package.json
frontend/public/: manifest.webmanifest  robots.txt
frontend/src/: index.html  main.spec.ts  styles.scss
notebooks/: 01_data_ingestion_stocks.ipynb  13_insights_quaks_news_analyst.ipynb  14_insights_quaks_news_analyst_etl.ipynb  15_insights_quaks_financial_analyst_v1.ipynb  16_post_to_x.ipynb  experiment_utils.py
otel/grafana/: otel-config.yml  tempo.yml
plugins/quaks-agents/: .mcp.json
scripts/: generate-sitemap.py
terraform/: bootstrap_backup_node.sh  init.sh
terraform/01_elasticsearch/: main.tf  variables.tf
terraform/02_airflow-instance/: main.tf  variables.tf
terraform/02_kibana/: main.tf  stocks_eod_data_view.ndjson  variables.tf
terraform/03_airflow-instance/: main.tf  variables.tf
terraform/03_quaks-auth-realm/: main.tf  variables.tf
terraform/04_quaks-dependencies/: main.tf  variables.tf
terraform/05_quaks-dependencies/: variables.tf
tests/: conftest.py
(+600 files in other folders)
