[project]
name = "quaks"
version = "1.5.14"
description = "Multi-agent financial agents platform"
requires-python = ">=3.12"
dependencies = [
  "browser-use",
  "charset-normalizer==3.4.2",
  "dependency-injector~=4.48.3",
  "eland~=9.2.0",
  "fastapi-keycloak-middleware~=1.6.0",
  "fastmcp~=3.2.0",
  "fastapi[standard]~=0.135.1",
  "hvac~=2.4.0",
  "icalendar~=7.0.2",
  "jinja2~=3.1.6",
  "langchain~=1.2.12",
  "langchain-anthropic~=1.4.0",
  "langchain-community~=0.4.1",
  "langchain-core~=1.2.16",
  "langchain-experimental~=0.4.1",
  "langchain-ollama~=1.0.1",
  "langchain-openai~=1.1.11",
  "langchain-postgres~=0.0.16",
  "langchain-tavily~=0.2.17",
  "langchain-text-splitters~=1.1.1",
  "langchain-xai~=1.2.2",
  "langgraph~=1.1.2",
  "langgraph-checkpoint-postgres~=3.0.4",
  "langgraph-prebuilt~=1.0.8",
  "langwatch~=0.16.0",
  "langwatch-scenario~=0.7.15",
  "litellm==1.83.0",
  "markitdown[all]~=0.1.5",
  "msal~=1.35.1",
  "opentelemetry-api==1.40.0",
  "opentelemetry-exporter-otlp-proto-http~=1.40.0",
  "opentelemetry-instrumentation-fastapi~=0.61b0",
  "opentelemetry-instrumentation-httpx~=0.61b0",
  "opentelemetry-instrumentation-langchain==0.52.6",
  "opentelemetry-instrumentation-psycopg~=0.61b0",
  "opentelemetry-instrumentation-psycopg2~=0.61b0",
  "opentelemetry-instrumentation-sqlalchemy~=0.61b0",
  "opentelemetry-sdk~=1.40.0",
  "psutil~=7.2.2",
  "psycopg-binary~=3.3.3",
  "psycopg-pool~=3.3.0",
  "psycopg2-binary~=2.9.11",
  "pydantic~=2.12.5",
  "pyyaml~=6.0.3",
  "redis~=7.3.0",
  "requests~=2.32.5",
  "slowapi~=0.1.9",
  "sqlalchemy~=2.0.46",
  "starlette~=0.52.1",
  "typing_extensions~=4.15.0",
  "unstructured[md]~=0.18.32",
  "uvicorn~=0.42.0",
]

[dependency-groups]
dev = [
  "flake8~=7.3.0",
  "isort~=8.0.1",
  "pre-commit~=4.5.1",
  "ruff~=0.15.2",
]
test = [
  "pytest~=9.0.2",
  "pytest-asyncio~=1.3.0",
  "pytest-cov~=7.0.0",
  "testcontainers[elasticsearch]~=4.14.1",
  "testcontainers[keycloak]~=4.14.1",
  "testcontainers[ollama]~=4.14.1",
  "testcontainers[postgres]~=4.14.1",
  "testcontainers[redis]~=4.14.1",
  "testcontainers[vault]~=4.14.1",
]
notebooks = [
  "IPython",
  "nest_asyncio",
  "pyppeteer",
  "python-dotenv",
]

[tool.semantic_release]
build_command = "uv lock && git add uv.lock"
version_variables = [
  "docker/app/Dockerfile:SERVICE_VERSION",
  "frontend/package.json:version",
  ".claude-plugin/marketplace.json:version",
  "plugins/quaks-agents/.claude-plugin/plugin.json:version",
  "pyproject.toml:version",
]
